# dash-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  buildspec.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
scripts/: create_superadmin.py
src/dash/: __main__.py
src/dash/infrastructure/: api_client.py  controllers_online_monitor.py  monopay.py  rate_limiter.py  s3.py  tgbot.py
src/dash/infrastructure/acquiring/: checkbox.py  liqpay.py  monopay.py
src/dash/infrastructure/acquring/: liqpay.py  monopay.py
src/dash/infrastructure/auth/: auth_service.py  dto.py  errors.py  id_provider.py  password_processor.py  sms_sender.py  token_processor.py
src/dash/infrastructure/db/: setup.py  tracker.py  transaction_manager.py
src/dash/infrastructure/gateways/: user_gateway.py
src/dash/infrastructure/iot/: carwash.py  client.py  wsm.py
src/dash/infrastructure/mqtt/: client.py
src/dash/infrastructure/repositories/: base.py  company.py  controller.py  customer.py  encashment.py  energy_state.py  location.py  payment.py  transaction.py  user.py  utils.py
src/dash/infrastructure/storages/: acquiring.py  acquring.py  carwash_session.py  iot.py  redis.py  session.py  verification.py
src/dash/main/: app.py  cli.py  config.py  di.py
src/dash/main/logging/: access.py  setup.py
src/dash/models/: __init__.py  admin_user.py  base.py  client.py  company.py  company_admin.py  customer.py  encashment.py  energy_state.py  location.py  location_admin.py  location_device.py  location_manager.py  payment.py  user.py
src/dash/models/controllers/: __init__.py  car_cleaner.py  carwash.py  controller.py  dummy.py  fiscalizer.py  laundry.py  vacuum.py  water_vending.py
src/dash/models/transactions/: __init__.py  car_cleaner.py  carwash.py  dummy.py  fiscalizer.py  laundry.py  transaction.py  vacuum.py  water_vending.py
src/dash/presentation/: bearer.py  exception_handlers.py  response_builder.py
src/dash/presentation/callbacks_wsm/: denomination.py  di_injector.py  encashment.py  payment_card_get.py  sale.py  state_info.py
src/dash/presentation/iot_callbacks/: begin.py  denomination.py  encashment.py  payment_card_get.py  state_info.py  tasmota.py
src/dash/presentation/routes/: acquiring.py  auth.py  carwash.py  carwash_customer.py  companies.py  controller.py  customer.py  dashboard.py  fiscalizer.py  location.py  payment.py  root.py  transaction.py  user.py  water_vending.py  wsm.py
src/dash/services/: errors.py
src/dash/services/carwash/: carwash.py  (+2 more)
src/infrastructure/db/: setup.py
src/main/: config.py
src/models/: __init__.py  company.py  location.py  location_device.py  location_manager.py  service_enum.py  user.py
src/models/controllers/: __init__.py  carwash.py  controller.py  vacuum.py  water_vending.py
src/models/transactions/: __init__.py  carwash.py  transaction.py  vacuum.py  water_vending.py
tests/: conftest.py  environment.py  test_callbacks.py  test_carwash_utils.py  test_common.py  test_company.py  test_controller_service.py  test_conversion.py  test_customer.py  test_customer_carwash.py  test_encashment.py  test_iot_services.py  test_laundry.py  test_location.py  test_sale_callback.py  test_transaction_dublicate.py  test_wsm_callbacks.py
tests/context/: settings.py
(+170 files in other folders)
